More changes to dolphin social network

--- a/dolphin-social-network/index.html
+++ b/dolphin-social-network/index.html
@@ -1,14 +1,21 @@
 <!doctype html>
 <html>
-  <meta charset="utf-8">
-  <head>
+<meta charset="utf-8">
+
+<head>
     <link rel="stylesheet" type="text/css" href="styles.css"></link>
-  </head>
-  <body>
+</head>
+
+<body>
+    <h2>Visualizing Dolphin Social Network</h2>
     <div id="viz"></div>
+    <div>The graph below depicts an undirected social network of frequent associations between 62 dolphins in a community living in Doubtful Sound, New Zealand.</div>
+    <div><a href="http://link.springer.com/article/10.1007%2Fs00265-003-0651-y">D. Lusseau, K. Schneider, O. J. Boisseau, P. Haase, E. Slooten, and S. M. Dawson, Behavioral Ecology and Sociobiology 54, 396-405 (2003)</a></div>
+    <div>Data provided by the <a href="http://uci.edu/">University of California, Irvine</a> - <a href="https://networkdata.ics.uci.edu/data.php?id=6">Network Data Repository</a></div>
     <script src="http://www.d3plus.org/js/d3.js"></script>
     <script src="http://www.d3plus.org/js/d3plus.js"></script>
     <script src="js/dolphin_data.js"></script>
     <script src="js/draw_dolphin_social_network.js"></script>
-  </body>
+</body>
+
 </html>
